<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="record">记一笔</string>
    <string name="pay">支出</string>
    <string name="project">项目</string>
    <string name="please_input_project">请输入项目名</string>
    <string name="fee">费用</string>
    <string name="please_input_fee">请输入费用</string>
    <string name="finish">完成</string>
</resources>