<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/project"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/please_input_project"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/fee"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/please_input_fee"
        android:textSize="16sp"
        android:inputType="number"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/finish"
        android:background="@color/purple_500"/>

</LinearLayout>